2016-01-23 Ben Shi <powerstudio1st AT 163 DOT com>

	* configure
	* configure.ac
	* debugger/mcs51/configure
	* debugger/mcs51/configure.ac
	* support/cpp/configure
	* support/cpp/configure.ac
	* support/packihx/configure
	* support/packihx/configure.ac
	  Try to use C99 first.
	* src/SDCC.lex
	  Remove a duplicate function definition.
	* src/SDCC.y
	  Change to C99 style.

2016-01-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  src/SDCCglue.h,
	  src/SDCCglue.c:
	  Do not display meaningless __reentrent to users.

2016-01-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c:
	  Make estimate for preserved regs on function pointers less conservative.
	* src/SDCCsymt.c:
	  Consider preserved regs for type of function pointer.

2016-01-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  More accurate handling of conditional jumps, handle ex (sp), ix and ex (sp), iy.

2016-01-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y:
	  Seems we have to worry about more than MSVC wrt. C99, patch #265 by Peter Dons Tychsen.

2016-01-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.h,
	  src/*/main.c,
	  src/z80/gen.c:
	  Implement declaration of preserved registers, RFE #483.
	* src/z80/peep.c
	  Handle preserved register information in peephole optimization.
	* device/include/stdlib.h,
	  device/include/string.h:
	  Preserved register information on standard functions.
	* doc/sdccman.lyx:
	  Document syntax for specifying preserved registers.

2016-01-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  More exact handling of ex, support for decimal shifts.

2016-01-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCdebug.c:
	  Debug info for block-copy-initialized global variables, patch #262 by Peter Dons Tychsen.
	* src/SDCCdwarf2.c: