@@ -67,7 +67,7 @@ typedef struct ast
   /* union for special processing */
   union
   {
-    const char *inlineasm;      /* pointer to inline assembler code */
+    char *inlineasm;            /* pointer to inline assembler code */
     literalList *constlist;     /* init list for array initializer. */
     symbol *sym;                /* if block then -> symbols */
     value *args;                /* if function then args    */
