@@ -1,3 +1,11 @@
+2016-01-24 Ben Shi <powerstudio1st AT 163 DOT com>
+	* src/SDCC.y
+	* src/SDCCast.c
+	* src/SDCCast.h
+	* src/SDCCutil.c
+	* src/SDCCutil.h
+	  Format inline asm coding style.
+
 2016-01-23 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* configure
